--- a/src/app/upload-file-modal/upload-file-modal.component.html
+++ b/src/app/upload-file-modal/upload-file-modal.component.html
@@ -59,7 +59,7 @@
     <button
       type="button"
       class="btn btn-outline-secondary"
-      (click)="modal.dismiss('cancel click')"
+      (click)="modal.dismiss()"
     >
       Cancel
     </button>
