--- a/src/app/fancybox/fancybox.component.scss
+++ b/src/app/fancybox/fancybox.component.scss
@@ -107,6 +107,7 @@
       height: 100%;
       width: 100%;
       border-radius: 0.35rem;
+      object-fit: contain;
     }
   }
   .lightbox-all-image {
